--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@
 
 buildscript {
 
-    ext.PLUGIN_VERSION = "1.1"
+    ext.PLUGIN_VERSION = "1.2"
     ext.ATAK_VERSION = "4.10.0"
 
     def takdevVersion = '2.+'
@@ -295,5 +295,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: '*.jar')
+    implementation 'com.android.support:support-compat:28.0.0'
+
 }
 
