--- a/local.properties
+++ b/local.properties
@@ -4,9 +4,9 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 20 11:29:04 CET 2024
+#Sun Dec 22 08:15:38 EST 2024
 ndk.dir=/Users/user/Library/Android/Sdk/ndk
-sdk.dir=C\:\\Users\\cbenbow\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\cfben\\AppData\\Local\\Android\\Sdk
 takDebugKeyAlias=key0
 takDebugKeyFile=key.jks
 takDebugKeyFilePassword=android
